<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_launcher_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_carrito"
        android:icon="@drawable/ic_launcher_car"
        android:title="@string/title_car" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_launcher_favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_launcher_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_launcher_menu"
        android:title="@string/title_menu" />
</menu>